# EcoFlare

./: .gitignore  README.md  package.json  pnpm-lock.yaml  sst-env.d.ts  sst.config.ts
backend/: drizzle.config.ts  package.json  sst-env.d.ts
backend/src/: db.ts  hono.ts  subscriber.ts
backend/src/model/: model.json
backend/subscriber/: pyproject.toml  sst.pyi  subscriber.py
frontend/: package.json  sst-env.d.ts
frontend/src/: App.vue  main.js  sst-env.d.ts  style.css
frontend/src/components/: Home.vue  Upload.vue
model/: convert.py  label_encoder_classes.npy  main.py  pyproject.toml  sst.pyi  sst_env.pyi  train.csv
model-backend/: Dockerfile  pyproject.toml  python.py
model-rs/: .dockerignore  Cargo.toml  Dockerfile
model-rs/.cargo/: config.toml
model-rs/src/: main.rs
model/output/: model.json
