[package]
name = "model-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
rpath = true


[dependencies]
aws-config = "1.5.14"
aws-sdk-s3 = "1.69.0"
image = "0.25.5"
labello = "0.0.5"
ndarray = "0.16.1"
ort = { version = "=2.0.0-rc.9", features = [] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.136"
tiny_http = "0.12.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
